# repo-template

./: .flake8  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: dependabot.yml  deploy-mkdocs.yml  flake8.yml  mypy.yml  pypi-publish.yml  pytest.yml  ruff.yaml  ruff.yml
docs/: index.md  myclass.md
myclass/: index.html
repo_template/: __init__.py  myclass.py
search/: search_index.json
src/repo_template/: __init__.py  version.py
tests/: test_myclass.py
tutorials/example/: example.ipynb  index.html
