[tool.poetry]
name = "repo-template"
version = "0.1.0"
description = ""
authors = ["Jorge Martínez-Palomera <jorgemarpa@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
pandas = "^2.2.1"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^6.0.0"
black = "^24.3"
ipywidgets = "^7.6.3"
mkdocs = "^1.5.0"
mkdocs-material = "^9.0.0"
mkdocstrings = {version = "^0.23.0", extras = ["python", "numpy-style"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
