[tool.poetry]
name = "repo-template"
version = "0.1.0"
description = ""
authors = ["Jorge Martínez-Palomera <jorgemarpa@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
pandas = "^2.2.1"
numpy = ">=1.26.4,<3.0.0"
astropy = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5"
ipywidgets = "^7.6.3"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {version = "^0.29.0", extras = ["python", "numpy-style"]}
mkdocs-jupyter = "^0.25.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Assumes Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`), a subset of pycodestyle (`E`) and isort (`I`).
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
